Guardando para actualizar la consulta