@@ -61,7 +61,7 @@ public class ProjectController {
 	}
 
 	private Long parseLongOrNull(String value) {
-		if (value == null || value.isBlank())
+		if (value == null || value.trim().isEmpty())
 			return null;
 		return Long.valueOf(value);
 	}
